--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
 
       <!-- Contact Form -->
       <div class="col-lg-7">
-        <form action="https://formspree.io/f/mwppyqrz" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+        <form action="https://formsubmit.co/mtintamei@gmail.com" method="POST" class="php-email-form">
           <div class="row gy-4">
             <!-- Name Field -->
             <div class="col-md-6">
