--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="https://i.postimg.cc/6Q6GCBns/2.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="https://i.postimg.cc/wMF9vmf3/DSC-1364.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
