--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="https://i.postimg.cc/6Q6GCBns/2.jpg" class="img-fluid" alt="">
+            <img src="https://i.postimg.cc/zDPg0HXq/DSC-1374-2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Aeronautical Engineer | Software Developer | Innovator</h2>
